tests/parse_print/random_perturb/set01/delete-06/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/delete-06/delete-06.essence:1:10:
  |
1 | language Essece 1.3
  |          ^^^^^^
Syntax Error: Not a valid language name
